--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ PORT=5000
 
 # The deployment environment (development | production)
 NODE_ENV=production
+
+# CORS Configuration
+# In production, set this to your specific domain(s) for security
+# Examples: https://yourdomain.com or https://yourdomain.com,https://www.yourdomain.com
+# Use * only for development or if you need to allow all origins
+CORS_ORIGIN=*
+
