--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "node scripts/build.mjs",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start": "node dist/index.js",
+    "start:dev": "cross-env NODE_ENV=development node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "deploy": "bash deploy.sh",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop furious5",
+    "pm2:restart": "pm2 restart furious5",
+    "pm2:logs": "pm2 logs furious5",
+    "pm2:monit": "pm2 monit",
+    "docker:build": "docker build -t furious5:latest .",
+    "docker:run": "docker run -d -p 5000:5000 --name furious5-app furious5:latest",
+    "docker:stop": "docker stop furious5-app && docker rm furious5-app",
+    "docker:logs": "docker logs -f furious5-app"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -45,14 +56,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compression": "^1.8.1",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
